entity rework